# -connector-hub

./: .gitignore  AGENTS.md  README.md  agent_maker_reply.txt  app.js  deep-research-report.md  index.html  styles.css
.github/workflows/: pages.yml
agent-maker-starter/: .env.example  .gitignore  CODEX_INSTRUCTIONS.md  README.md  pyproject.toml
agent-maker-starter/.githooks/: pre-commit
agent-maker-starter/.github/workflows/: tests.yml
agent-maker-starter/docs/: ARCHITECTURE.md  BUILD_PLAN.md  ROADMAP.md  SECRETS.md  SYNC_WORKFLOW.md
agent-maker-starter/examples/: tasks.yaml
agent-maker-starter/scripts/: generate_secrets.py  git_safe_push.ps1  install_git_hooks.ps1  sync_to_ai_army.ps1  sync_to_ai_army.sh
agent-maker-starter/src/agent_maker/: cli.py
agent-maker-starter/src/agent_maker/core/: executor.py  orchestrator.py  planner.py  state.py
agent-maker-starter/src/agent_maker/evals/: runner.py
agent-maker-starter/src/agent_maker/memory/: local_store.py
agent-maker-starter/src/agent_maker/safety/: policy.py
agent-maker-starter/src/agent_maker/tools/: basic.py  registry.py
agent-maker-starter/tests/: test_demo_agent.py
agent-maker-sync-handoff/: CODEX_TASK.md  README.md
agent-maker-sync-handoff/docs/: Sync Setup Assistance.txt  agent-maker-sync-status.md
agent-maker-sync-handoff/repo_scaffold/: README.md
agent-maker-sync-handoff/scripts/: inspect-ai-army.ps1  sync-agent-maker.ps1
agent-maker-sync-handoff/source_drop_here/: Sync Setup Assistance.txt
agents/: agent-maker.agent.md  agent-maker.profile.md
docs/: agent-maker-sync-status.md
(+1 files in other folders)
